# OpenOneRec

./: .gitignore  README.md  项目框架与执行流程分析.md
benchmarks/: LICENSE  README.md  eval_script.sh  pyproject.toml  requirements.txt
benchmarks/api/: README.md  __init__.py  base.py  claude.py  deepseek.py  example.py  gemini.py
benchmarks/benchmark/: __init__.py  base_generator.py  benchmark.py  checkpoint_utils.py  console.py  generation_runner.py  gpu_utils.py
benchmarks/benchmark/tasks/: __init__.py  tasks.py
benchmarks/benchmark/tasks/v1_0/: README.md  __init__.py  base_evaluator.py  base_loader.py  mfu_evaluator.py  qwen3_soft_switch.jinja2  registry.py
benchmarks/benchmark/tasks/v1_0/item_understand/: __init__.py  config.py  evaluator.py  utils.py
benchmarks/benchmark/tasks/v1_0/label_pred/: __init__.py  config.py  evaluator.py  utils.py
benchmarks/benchmark/tasks/v1_0/rec_reason/: __init__.py  config.py  evaluator.py  utils.py
benchmarks/benchmark/tasks/v1_0/recommendation/: __init__.py  config.py  evaluator.py  utils.py  utils_by_pid.py
benchmarks/scripts/: eval_dev_results.py  init_ray.sh  init_ray_cluster.sh
benchmarks/scripts/ray-vllm/: evaluate.py
benchmarks/scripts/ray-vllm/utils/: __init__.py  arguments.py  generator.py
data/: README.md  prepare_distillation.sh  prepare_pretrain.sh  prepare_rl.sh  prepare_sft.sh
pretrain/: .env  .gitignore  README.md  set_env.sh
verl_distillation/: README.md  README_ORIGINAL.md  deploy_env.sh  init_ray.sh  pyproject.toml  requirements-npu.txt  requirements.txt  requirements_sglang.txt  setup.py  (+1 more)
(+1002 files in other folders)
